# archeus_videos

./: .gitignore
0000_vector/: Outline.txt  Readme.md  Script.md  Style.md
0000_vector/boilerplate_cmake/: CMakeLists.txt
0000_vector/boilerplate_cmake/include/arc/std/: bool.h  vector.h
0000_vector/boilerplate_cmake/src/std/: errno.c  vector.c
0000_vector/boilerplate_simple/: Makefile  build.bat
0000_vector/boilerplate_simple/src/: errno.c  errno.h  test.c  test.h  vector.h
0000_vector/boilerplate_simple/tests/: vector.c
0000_vector/complete_code/include/arc/std/: bool.h  vector.h
0000_vector/complete_code/src/std/: vector.c
0000_vector/complete_code/tests/: test.c
0000_vector/complete_code/tests/std/: vector.c
0000_vector/controller_scripts/: controller.actionscript  vector_c0_struct.actionscript  vector_c1_struct_define.actionscript  vector_c2_default_compare.actionscript  vector_c3_create.actionscript  vector_c4_destroy.actionscript  vector_c5_add.actionscript  vector_c6_remove_index.actionscript  vector_c7_remove.actionscript  vector_c8_get_size_and_get.actionscript  vector_header.actionscript  vector_header_boilerplate.actionscript  vector_test_example.actionscript  vector_tests.actionscript
